fix(backport): bulk fix 1.21 NBT API across all minecolonies files - compound.put() -> compound.setTag() (NBT 1.7.10 API) - world.random.nextInt() -> world.rand.nextInt() - world.getGameTime() -> world.getTotalWorldTime() - .getList() -> .getTagList() - .getCompound(idx) -> .getCompoundTagAt(idx) (list access) - .getCompound(tag) -> .getCompoundTag(tag) (compound access) 125 files updated